# Gseventh

./: CMakeLists.txt  main.cpp
algorithm/max-min/: AlphaBetaEngine.h  alpha-beta.h
algorithm/mcts/: MCTSEngine.cpp  MCTSEngine.h  MCTSEngineImpl.h
common/: bitset.h  k_dimensional_array.h  scanner.h  singleton.h  template.h
game/: CMakeLists.txt  reversi_alphabeta.cpp  reversi_alphabeta.h
game/gomuku/: GomukuEngine.cpp  GomukuEngine.h
game/reversi/: ReversiEngine.cpp  ReversiEngine.h
